--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">NQPosSysV8</string>
+    <string name="app_name">NQEntityV8</string>
+    <string name="file_name_qticket">CachedQticket</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main_ui">Nemo-Q</string>
     <string name="dummy_button">Dummy Button</string>
